--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
-.container{
-    background-color: #463d3d9e;
-    border-radius: 10px;
-    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 400px;
-    
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Arial, sans-serif;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #1e90ff;
+}
+.container {
     text-align: center;
 }
