--- a/style.css
+++ b/style.css
@@ -15,3 +15,14 @@ body {
 .container {
     text-align: center;
 }
+
+.calculator{
+    margin-bottom: 20px;
+}
+
+input[type="date"] {
+    padding: 10px;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    font-size: 16px;
+}
