--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,14 +10,21 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #1e90ff;
-}
-.container {
-    text-align: center;
+    background-color: #fff;
 }
 
-.calculator{
+.container {
+    text-align: center;
+    background-color: #1e90ff;
+width: 500px;
+height: 280px;
+}
+
+.calculator {
     margin-bottom: 20px;
+    padding: 30px 5px;
+    background-color: #000;
+   
 }
 
 input[type="date"] {
@@ -25,4 +32,38 @@ input[type="date"] {
     border-radius: 5px;
     border: 2px solid #fff;
     font-size: 16px;
+}
+
+button {
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: none;
+    background-color: #fff;
+    color: #000;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.results {
+    display: flex;
+    justify-content: center;
+}
+
+.box {
+    background-color: #000;
+    color: #fff;
+    margin:0 10px;
+    padding: 5px;
+    justify-content: center;
+    border-radius: 10px;
+    width: 70px;
+}
+
+h1 {
+    font-size: 48px;
+    margin-bottom: 10px;
+}
+
+p {
+    font-size: 18px;
 }
