--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -10,21 +11,25 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #fff;
+    background-color: #1e90ff;
 }
 
 .container {
-    text-align: center;
-    background-color: #1e90ff;
-width: 500px;
-height: 280px;
+    background-color: rgb(33, 103, 196);
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
 }
 
 .calculator {
-    margin-bottom: 20px;
-    padding: 30px 5px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     background-color: #000;
-   
+    padding: 10px;
+    border-radius: 10px;
 }
 
 input[type="date"] {
@@ -32,6 +37,7 @@ input[type="date"] {
     border-radius: 5px;
     border: 2px solid #fff;
     font-size: 16px;
+    margin-right: 10px;
 }
 
 button {
@@ -47,16 +53,16 @@ button {
 .results {
     display: flex;
     justify-content: center;
+    margin-top: 20px;
 }
 
 .box {
     background-color: #000;
     color: #fff;
-    margin:0 10px;
-    padding: 5px;
-    justify-content: center;
+    margin: 0 10px;
+    padding: 20px;
     border-radius: 10px;
-    width: 70px;
+    width: 100px;
 }
 
 h1 {
