add the background-color

--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #1e90ff;
+    background-color: #192735;
 }
 
 .container {
-    background-color: rgb(33, 103, 196);
+    
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px rgba(255, 255, 255, 0.3), 0 5px 10px;
     
 }
 
@@ -42,14 +42,20 @@ input[type="date"] {
 
 button {
     padding: 10px 20px;
-    border-radius: 5px;
+    border: 1px solid #43ea87;
     border: none;
-    background-color: #fff;
-    color: #000;
+    background-color: transparent;
+    color: #43ea87;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 25px;
+    transition: width 0.6s backgroung-color 0.6s;
 }
-
+button:hover{
+    width: 180px;
+    background-color: #43ea87;
+    color: #192735;
+}
 .results {
     display: flex;
     justify-content: center;
